--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,6 +5,7 @@
         <div id="container">
             <div id="welcome">
                 <h1><span>Welcome to</span> Symfony {{ constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION') }}</h1>
+				<small>Lab by: <a href="mailto:tuanquynh0508@gmail.com">tuanquynh0508@gmail.com</a><small>
             </div>
 
             <div id="status">
